  ObservableEntityList refactored from FXEntityListModel
  Util.getDelimitedString() no longer appends a redundant line separator at end
  EntityUtil.getStringValueArray() added
  FXEntityListModel.getTableDataAsDelimitedString() implemented
  FXEntityListModel.savePreferences() and setColumns() implemented
  framework.model generified
  DefaultEntityTableModel renamed to SwingEntityTableModel
  DefaultEntityModelProvider renamed to SwingEntityModelProvider
  Snapshot release mechanism enabled
  More swing components renamed
0.10.1
  jminor-client-model module renamed to jminor-framework-model
  jminor-framework-model-unittests module added
  jminor-swing project module split from jminor-core
  Major refactoring of build files
  More build file refactoring
  Sonar based JavaFX fixes
  EntityLookupModel.addSelectedEntitiesListener() parameter changed to EventInfoListener<Collection<Entity>>
  Server monitor module refactored from Swing module
  DefaultEntityEditModel.createForeignKeyLookupModel() now restricts the lookup model to single selection
  Sonar run
  Ant build dependencies moved from core module
  Framework module split from core
  Core module renamed to common
  Module jminor-common-model renamed to jminor-common
0.10.2
  Substantial refactoring of org.jminor.common package
  Module common split into sub-modules
  Module jminor-common-server-api renamed to jminor-common-server-client
  Module abomination jminor-common-server-client removed
  ServerInfo and DefaultServerInfo made inner classes of Server and AbstractServer respectively, Conjunction, User and Version moved back to common.model, for backwards compatability
  ScenarioException made inner class of LoadTest
  Value and Values moved to org.jminor.common
  SerializeException made inner class of Serializer
  TaskScheduler moved to org.jminor.common.model.tools
0.10.3
  Framework modules renamed for consistency